# Chess-Prediction

./: AGENTS.md  Oracle_one_move  Oracle_pgn_file  Oracle_web.py  README.md  WEB_USAGE_FR.md  pyproject.toml
.github/workflows/: ci.yml
oracle/: config.py
oracle/calib/: __init__.py  calibration.default.yaml  calibrator.py  quality.py
oracle/core/: __init__.py  castling.py  expand.py  expected.py  normalize.py
oracle/infrastructure/: openai_client.py
oracle/interfaces/web/: app.py
oracle/interfaces/web/templates/: index.html
oracle/llm/: __init__.py  base.py  hf_serverless.py  llama_cpp_local.py  selector.py  transformers_local.py
oracle/pipeline/: __init__.py  analyze.py
oracle/sf/: __init__.py  adapter.py
tests/: test_config.py  test_hf_serverless_provider.py  test_pyproject.py  test_sanity.py
tests/calib/: test_calibrator.py  test_quality.py
tests/cli/: test_one_move.py  test_pgn_file.py
tests/core/: test_castling.py  test_expand_san.py  test_expected.py  test_normalize.py
tests/e2e/: test_pipeline_fake.py
tests/llm/: test_hf_backoff.py  test_hf_serverless_fallback.py  test_hf_serverless_mock.py  test_hf_serverless_parsing.py  test_llama_cpp_adapter.py  test_provider_contract.py  test_selector.py  test_transformers_local_mock.py
tests/sf/: test_adapter.py
tests/web/: test_api_analyze.py  test_web_stockfish_selection.py
